ghc-4335c07/testsuite/tests/patsyn/should_fail/unidir.hs
{-# LANGUAGE PatternSynonyms #-}
module ShouldFail where

pattern Head x = x:_
