ghc-4335c07/testsuite/tests/patsyn/should_fail/unidir.stderr

unidir.hs:4:18: error:
    Invalid right-hand side of bidirectional pattern synonym ‘Head’:
      Pattern ‘_’ is not invertible
      Suggestion: instead use an explicitly bidirectional pattern synonym, e.g.
        pattern Head x <- x : _ where Head x = ...
    RHS pattern: x : _
